--- a/css/estilos.css
+++ b/css/estilos.css
@@ -54,7 +54,7 @@ header {
 	align-items: flex-start;
 	padding: 16px;
 	gap: 16px;
-	background-color: #009748;
+	background-color: #FF0000;
 	border-radius: 8px;
 	width: 512px;
 	height: 30px;
